自定义启动方式